# ink-sdk

./: README.md
.github/: rust.yml
contracts/: Cargo.toml  cross_chain_base.rs  cross_chain_helper.rs  lib.rs
examples/greeting/: Cargo.toml  lib.rs
examples/osComputing/: .gitignore  Cargo.toml  build.sh  lib.rs
greeting/: Cargo.toml  lib.rs
project/: README.md
