[package]
name = "ink_sdk"
version = "0.1.0"
authors = ["Dante Network <danten0402@gmail.com>"]
edition = "2021"

[dependencies]

payload = {git = "https://github.com/dantenetwork/message-ink", branch = "ink-2.0-alpha.3", default-features = false, features = ["ink-as-dependency"]}
ink = {git = "https://github.com/paritytech/ink", tag = "v4.0.0-alpha.3", default-features = false}

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2", default-features = false, features = ["derive", "serde", "decode"] }

[lib]
name = "ink_sdk"
path = "lib.rs"
crate-type = [
	# Used for normal contract Wasm blobs.
	"cdylib",
    # Used for ABI generation.
    "rlib",
]

[features]
default = ["std"]
std = [
    "ink/std",
    "scale/std",
    "scale-info/std",
]
ink-as-dependency = []
